# InPlace

./: Cargo.toml  README.md  reduction.tex
src/: lib.rs  main.rs
tests/: 123.rl  a_relog.rs  c_cli.rs  c_perf.rs  perf.rl
