[package]
name = "relog"
version = "1.0.7"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT"
description = "Strong String Normalization"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/InPlace"
keywords = ["algorithms"]

[[bin]]
name = "relog"

[dependencies]
itertools = { version = "0.12" }
